# ComfyUI_Workbench

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
comfyui/: __init__.py  backend.py  workflow.json
docs/superpowers/plans/: 2026-06-25-collaborative-canvas-liveblocks.md  2026-06-26-project-workspaces.md  2026-06-27-postgres-minio-migration.md
docs/superpowers/specs/: 2026-06-25-canvas-v2-design.md  2026-06-25-collaborative-canvas-liveblocks-design.md  2026-06-26-project-workspaces-design.md  2026-06-27-postgres-minio-migration-design.md
tests/: test_api_contract.py  test_api_queue.py  test_app_integration.py  test_auth_endpoints.py  test_auth_unit.py  test_config_storage.py  test_event_bus_unit.py  test_folders_api.py  test_postgres_schema.py  test_projects_api.py  test_remote_workflows_api.py  test_repository_unit.py  test_services_unit.py  test_storage_local_unit.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.auth.test.tsx  App.tsx  styles.css  types.ts
web/src/api/: client.test.ts  client.ts
web/src/components/: DetailDrawer.tsx  FolderTree.tsx  FormDialog.tsx  Sidebar.tsx  (+2 more)
workbench/: api.py  auth.py  comfyui_adapter.py  comfyui_queue.py  config.py  db.py  errors.py  main.py  models.py  permissions.py  remote_workflows.py  repositories.py  routes_auth.py  schema.sql  schema_postgres.sql  sse.py  storage.py  worker.py
workbench/scripts/: __init__.py  init_db.py
workbench/services/: assets.py  folders.py  jobs.py  project_workflows.py  projects.py  tags.py  videos.py
(+41 files in other folders)
