[project]
name = "comfyui-workbench"
version = "0.1.0"
description = "ComfyUI Workbench — standalone web UI for ComfyUI video generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "requests",
    "pyjwt>=2.8",
    "sse-starlette>=2.2",
    "python-dotenv>=1.2.2",
    "httpx-socks>=0.11.0",
    "pytest>=9.1.1",
    "minio>=7.2.20",
    "psycopg[binary]>=3.3.4",
]
